@startuml timer
skinparam DefaultFontName "Ubuntu Mono"
scale 20


NS --|> std::chrono::nanoseconds

US --|> std::chrono::microseconds

MS -up-|> std::chrono::milliseconds

S -up-|> std::chrono::seconds

MIN --|> std::chrono::minutes

H --|> std::chrono::hours

class Timer{
    - _start:time_point_type
    - _last:time_point_type

    + last_elapsed():float
    + last_elapsed(std::string):std::string
   
    + total_elapsed():float
    + total_elapsed(std::string):std::string

    + sleep(period)

    + reStart()

    # count(ref):float
}

NS .up. Duration
US .up. Duration
MS .up. Duration
S .up. Duration
MIN .up. Duration
H .up. Duration

Duration .up. Timer : the duration unit type >

class NS{
    + unit_str()
}
class US{
    + unit_str()
}
class MS{
    + unit_str()
}
class S{
    + unit_str()
}
class MIN{
    + unit_str()
}
class H{
    + unit_str()
}

@enduml